k8s/ingress/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-prod
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
  - host: prod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-api
            port:
              number: 80
